fixed center alignment of paragraphs

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ h3 {
 	align-items: center;
 	text-wrap: balance;
 	width: 800px;
+	text-align: center;
 }
 /* Navbar Styling */
 .navbar {
